--- a/invest.ipynb
+++ b/invest.ipynb
@@ -2127,7 +2127,9 @@
     "# Genel Düşüncem\n",
     "### Türkiye borsasının son 25 senedir artması nominal anlamda güzel çünkü diğer paralara karşı kaybettiği değer göz önüne alınmıyor, 25 senenin son 3 senesi dışında dolar bazında artması düşük kalmıştır. Bunun sebebi de son zamanlarda yapılan sabit bir döviz kurunda tutmaya çalışmasıdır. \n",
     "### Amerika borsası özellikle NASDAQ, S&P 500, Altın ve gelişmekte olan ülke statüsündeki Türkiye(3*) son 4 senenin reel ve nominal bazlı kazananları olmuştur. Altın bir sigortadır ve değer koruma aracıdır. Altının çok yükselmesi doların değerini enflasyonla kaybetmesi, Doların güvenilirliğini kaybetmesi manasına gelir. Dünyadaki Merkez Bankalarının neredeyse hepsi Altın taşır, bu sigorta olduğunun en büyük göstergesidir.\n",
-    "![Screenshot_134.png](attachment:Screenshot_134.png) (*5)"
+    "![Screenshot_134.png](attachment:Screenshot_134.png) (*5)\n",
+    "\n",
+    "### Önemli olan ortalama almaktır. Kimse borsa veya altında dip noktasını bilemez ama düştükçe almak en mantıklı yatırımcı kişiliğidir. Düştükçe alma noktası hisse senetlerinde çoğu zaman geçerli olmayabiliyor. Ama yatırım fonları sayesinde bilmediğiniz bilgi birikimini, bilen insanlara emanet ederek daha rahat bir ortalama bulmanız çok mümkün."
    ]
   },
   {
