--- a/invest.ipynb
+++ b/invest.ipynb
@@ -1902,7 +1902,7 @@
    "metadata": {},
    "source": [
     "## Kendi Yorumum\n",
-    "#### Ülkeler yani hükümetler şimdiki zamanlarda faiz arttırarak sıkı bir daraltıcı bir politika izlemeye çalışırken aslında bu yüksek faiz uygularken para arzını arttırmaya devam ederek senyoraj geliri kazanmaya devam etmiştir. Bu tabii ki para değerlerinin her sene enflasyonla erimesi(en basitinden Amerika'nın ortalama enflasyonu son 10 sene içerisinde %3.51'dir, bu Doların 10 sene içerisinde minimum %25 değerini kaybettiğinin en belirgin göstergesidir) bir yandan ABD Dolarının da erimesi borsaların ve altının yükselmesini sağlamıştır. Altın ve incelediğimiz borsalarda enflasyona ve para değeri kaybına bağlı aşırı bir artış gerçekleşmiştir.\n",
+    "#### *Ülkeler yani hükümetler, şimdiki zamanlarda faiz arttırarak sıkı bir daraltıcı bir politika izlemeye uğraşma taklidi yaparlar ve bu sırada faizleri yükseltir, tamamıyla zıt bir politika olan para arzını arttırmaya devam ederek senyoraj geliri kazanmaya devam etmiştir. Bu durum, hükümetlerin iktidarlarını sürdürmeye çalışmalarını ve vergi yerine halktan sessiz bir şekilde senyoraj geliri almak istemelerinden kaynaklanır. Bu para değerlerinin, para bolluğuyla gelen enflasyonla erimesine yol açmaktadır. Örneğin, Amerika'nın ortalama enflasyonu son 10 sene içerisinde %3.51'dir ve bu Doların 10 yılda minimum %25 değer kaybettiğinin en belirgin göstergesidir. Bu durumda Doların erimesi, borsaların ve altının yükselmesini desteklemiştir. Altın ve incelediğimiz borsalarda para değeri kaybına bağlı aşırı bir artış gerçekleşmiştir.\n",
     "\n",
     "### Tabii ki bu durum sürdürülemeyecek bir noktaya girecek ve belli bir noktada Amerika'dan başlamak üzere borsalarda ani bir düşüş yaşanılacaktır, kaçınılmazdır. İlk küçük bankalar olmak üzere domino taşı misali büyük bankaları da batıracağının en büyük göstergesi yüksek faizlerin her işletme için bir yük olmasıdır."
    ]
@@ -1911,7 +1911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2019-2024'ün Mayıs ayına kadar dünya borsalarının ve altının neredeyse 5.5 senede gösterdiği performans aşağıdaki gibidir."
+    "## 2019-2024'ün Mayıs ayına kadar dünya borsalarının ve altının neredeyse nominal anlamda 5.5 senede gösterdiği performans aşağıdaki gibidir."
    ]
   },
   {
@@ -2125,11 +2125,12 @@
    "metadata": {},
    "source": [
     "# Genel Düşüncem\n",
-    "### Türkiye borsasının son 25 senedir artması nominal anlamda güzel çünkü diğer paralara karşı kaybettiği değer göz önüne alınmıyor, 25 senenin son 3 senesi dışında dolar bazında artması düşük kalmıştır. Bunun sebebi de son zamanlarda yapılan sabit bir döviz kurunda tutmaya çalışmasıdır. \n",
-    "### Amerika borsası özellikle NASDAQ, S&P 500, Altın ve gelişmekte olan ülke statüsündeki Türkiye(3*) son 4 senenin reel ve nominal bazlı kazananları olmuştur. Altın bir sigortadır ve değer koruma aracıdır. Altının çok yükselmesi doların değerini enflasyonla kaybetmesi, Doların güvenilirliğini kaybetmesi manasına gelir. Dünyadaki Merkez Bankalarının neredeyse hepsi Altın taşır, bu sigorta olduğunun en büyük göstergesidir.\n",
+    "### Türkiye borsasının son 25 senedir artması nominal anlamda güzel çünkü dolara karşı kaybettiği değer yani reel kazanç göz önüne alınmıyor, 25 senenin son 3 senesi dışında dolar bazında artması ise düşük kalmıştır. Bunun sebebi de son zamanlarda yapılan sabit bir döviz kurunda tutmaya çalışmasıdır. Hala devam etmekte olan bu politika Türk Lirasının aşırı değerli olmasına ve ithalatın gereğinden fazla artmasına sebep olacaktır.\n",
+    "\n",
+    "### Amerika borsası özellikle NASDAQ, S&P 500, Altın ve gelişmekte olan ülke statüsündeki Türkiye(2021-05.2024*) son 4 senenin reel ve nominal bazlı kazananları olmuştur. Altın bir sigortadır ve değer koruma aracıdır. Altının çok yükselmesi doların değerini enflasyonla kaybetmesi, Doların güvenilirliğini kaybetmesi manasına gelir. Dünyadaki Merkez Bankalarının neredeyse hepsi Altın taşır, bu sigorta olduğunun en büyük göstergesidir.\n",
     "![Screenshot_134.png](attachment:Screenshot_134.png) (*5)\n",
     "\n",
-    "### Önemli olan ortalama almaktır. Kimse borsa veya altında dip noktasını bilemez ama düştükçe almak en mantıklı yatırımcı kişiliğidir. Düştükçe alma noktası hisse senetlerinde çoğu zaman geçerli olmayabiliyor. Ama yatırım fonları sayesinde bilmediğiniz bilgi birikimini, bilen insanlara emanet ederek daha rahat bir ortalama bulmanız çok mümkün."
+    "## Önemli olan ortalama almaktır. Kimse borsa veya altında dip noktasını bilemez ama düştükçe almak en mantıklı yatırımcılık örneğidir. Düştükçe alma noktası hisse senetlerinde çoğu zaman geçerli olmayabiliyor. Ama yatırım fonları sayesinde bilmediğiniz bilgi birikimini, bilen insanlara emanet ederek düzgün bir maliyet bulmanız çok daha kolaydır."
    ]
   },
   {
@@ -2168,7 +2169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
