--- a/invest.ipynb
+++ b/invest.ipynb
@@ -1904,7 +1904,7 @@
     "## Kendi Yorumum\n",
     "#### *Ülkeler yani hükümetler, şimdiki zamanlarda faiz arttırarak sıkı bir daraltıcı bir politika izlemeye uğraşma taklidi yaparlar ve bu sırada faizleri yükseltir, tamamıyla zıt bir politika olan para arzını arttırmaya devam ederek senyoraj geliri kazanmaya devam etmiştir. Bu durum, hükümetlerin iktidarlarını sürdürmeye çalışmalarını ve vergi yerine halktan sessiz bir şekilde senyoraj geliri almak istemelerinden kaynaklanır. Bu para değerlerinin, para bolluğuyla gelen enflasyonla erimesine yol açmaktadır. Örneğin, Amerika'nın ortalama enflasyonu son 10 sene içerisinde %3.51'dir ve bu Doların 10 yılda minimum %25 değer kaybettiğinin en belirgin göstergesidir. Bu durumda Doların erimesi, borsaların ve altının yükselmesini desteklemiştir. Altın ve incelediğimiz borsalarda para değeri kaybına bağlı aşırı bir artış gerçekleşmiştir.\n",
     "\n",
-    "### Tabii ki bu durum sürdürülemeyecek bir noktaya girecek ve belli bir noktada Amerika'dan başlamak üzere borsalarda ani bir düşüş yaşanılacaktır, kaçınılmazdır. İlk küçük bankalar olmak üzere domino taşı misali büyük bankaları da batıracağının en büyük göstergesi yüksek faizlerin her işletme için bir yük olmasıdır."
+    "### Tabii ki, bu durum sürdürülemez bir noktaya gelecek ve Amerika'dan başlayarak borsalarda ani bir düşüş yaşanacak, kaçınılmaz olacaktır. İlk olarak küçük bankaların batmasıyla başlayacak olan domino etkisi, büyük bankaların da batmasına yol açacak. Bu durumu en iyi gösteren şey, yüksek faizlerin her işletme için bir yük olmasıdır."
    ]
   },
   {
